crates/oxc_codegen/tests/integration/snapshots/astro/preserve_namespaces.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect xlink:href="#id"></svg>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect xlink:href="#id"></rect></svg>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
ERROR: Parse errors: [OxcDiagnostic { inner: OxcDiagnosticInner { message: "Expected corresponding JSX closing tag for 'rect'.", labels: Some([LabeledSpan { label: Some("Expected `</rect>`"), span: SourceSpan { offset: SourceOffset(108), length: 3 }, primary: true }, LabeledSpan { label: Some("Opened here"), span: SourceSpan { offset: SourceOffset(84), length: 4 }, primary: false }]), help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }, OxcDiagnostic { inner: OxcDiagnosticInner { message: "Expected `<` but found `EOF`", labels: Some([LabeledSpan { label: Some("`<` expected"), span: SourceSpan { offset: SourceOffset(112), length: 0 }, primary: false }]), help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }]
